--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navegadorFondo">
 <ul>
     <li class="navegadorprincipal"><a href="index.html" class="aNavegador">Inicio</a></li>
-    <li class="navegadorprincipal"><a href="Informacion.html" class="aNavegador">Informacion</a></li>
+    <li class="navegadorprincipal"><a href="informacion.html" class="aNavegador">Informacion</a></li>
     <li class="navegadorprincipal"><a href="juego/juego1.html" class="aNavegador">Juego</a></li>
     <li class="navegadorprincipal"><a href="./canciones/mibuenamigo.html" class="aNavegador">Canciones</a></li>
 </ul>
